; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_test_kmod.c_config_num_threads_show.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_test_kmod.c_config_num_threads_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.kmod_test_device = type { %struct.test_config }
%struct.test_config = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @config_num_threads_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @config_num_threads_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.kmod_test_device*, align 8
  %8 = alloca %struct.test_config*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.kmod_test_device* @dev_to_test_dev(%struct.device* %9)
  store %struct.kmod_test_device* %10, %struct.kmod_test_device** %7, align 8
  %11 = load %struct.kmod_test_device*, %struct.kmod_test_device** %7, align 8
  %12 = getelementptr inbounds %struct.kmod_test_device, %struct.kmod_test_device* %11, i32 0, i32 0
  store %struct.test_config* %12, %struct.test_config** %8, align 8
  %13 = load %struct.kmod_test_device*, %struct.kmod_test_device** %7, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load %struct.test_config*, %struct.test_config** %8, align 8
  %16 = getelementptr inbounds %struct.test_config, %struct.test_config* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @test_dev_config_show_int(%struct.kmod_test_device* %13, i8* %14, i32 %17)
  ret i32 %18
}

declare dso_local %struct.kmod_test_device* @dev_to_test_dev(%struct.device*) #1

declare dso_local i32 @test_dev_config_show_int(%struct.kmod_test_device*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
